@@ -98,6 +98,7 @@
 
 		local rootfs_resize_limit=$(cat /DietPi/dietpi.txt | grep -m1 '^rootfs_resize_limit=' | sed 's/.*=//')
 
+		local target_partition=$(findmnt / -o source -n | sed 's/.*p//')
 		local target_dev=$(findmnt / -o source -n)
 
 		# - MMCBLK[0-9]p[0-9] scrape
@@ -114,17 +115,17 @@
 
 		if (( $rootfs_resize_limit < 100 )); then
 
-			parted -s $target_dev unit % resizepart 2 $rootfs_resize_limit% || parted $target_dev unit % resizepart 2 Yes $rootfs_resize_limit%
+			parted -s $target_dev unit % resizepart $target_partition $rootfs_resize_limit% || parted $target_dev unit % resizepart $target_partition Yes $rootfs_resize_limit%
 
 		else
 
 			cat << _EOF_ | fdisk $target_dev
 p
 d
-2
+$target_partition
 n
 p
-2
+$target_partition
 $(parted $target_dev -ms unit s p | grep ':ext4::;' | sed 's/:/ /g' | sed 's/s//g' | awk '{ print $2 }')
 
 p
