@@ -1195,7 +1195,7 @@
 		local whiptail_menu_array=()
 
 		#Get Current Settings
-		local swap_size=$(cat /etc/dphys-swapfile | grep -m1 '^CONF_SWAPSIZE=' | sed 's/.*=//')
+		local swap_size=$(grep -m1 '^CONF_SWAPSIZE=' /etc/dphys-swapfile | sed 's/.*=//')
 		local swap_text="$swap_size MB"
 		if (( $swap_size == 0 )); then
 			swap_text="Disabled"
@@ -1355,6 +1355,7 @@
 
 				#RPI
 				if (( $HW_MODEL < 10 )); then
+
 					WHIP_QUESTION=" Would you like to update the firmware on your Pi? \n - This will run rpi-update"
 					whiptail --title "$WHIP_TITLE" --yesno "$WHIP_QUESTION" --yes-button "Ok" --no-button "Back" --defaultno --backtitle "$WHIP_BACKTITLE" 12 60
 					CHOICE=$?
@@ -1387,14 +1388,14 @@
 
 				#OrangePi
 				elif (( $HW_MODEL >= 30 )) && (( $HW_MODEL < 40 )); then
-					WHIP_QUESTION=" Would you like to update the firmware on your $HW_MODEL_DESCRIPTION? \n - This will run Loboris's update script."
-					whiptail --title "$WHIP_TITLE" --yesno "$WHIP_QUESTION" --yes-button "Ok" --no-button "Back" --defaultno --backtitle "$WHIP_BACKTITLE" 12 60
+
+					WHIP_QUESTION=" Would you like to update the firmware on your $HW_MODEL_DESCRIPTION? \n - This will run apt-get dist-upgrade\n\nNB: When asked if you wish to overwrite the current kernel, press Tab and then enter (to confirm)."
+					whiptail --title "$WHIP_TITLE" --yesno "$WHIP_QUESTION" --yes-button "Ok" --no-button "Back" --defaultno --backtitle "$WHIP_BACKTITLE" 14 60
 					CHOICE=$?
 					if (( $CHOICE == 0 )); then
-						wget https://raw.githubusercontent.com/loboris/OrangePi-BuildLinux/master/update_kernel.sh
-						chmod +x update_kernel.sh
-						./update_kernel.sh
-						rm update_kernel.sh
+
+						apt-get dist-upgrade -y
+
 					fi
 
 				#PineA64
@@ -1408,7 +1409,9 @@
 					fi
 
 				else
+
 					Info_HW_OptionNotSupported
+
 				fi
 
 				#Return to This Menu
@@ -1541,7 +1544,7 @@
 		TARGETMENUID=0
 
 		#All devices
-		local current_cpu_governor=$(cat /DietPi/dietpi.txt | grep -m1 '^cpu_governor=' | sed 's/.*=//')
+		local current_cpu_governor=$(grep -m1 '^cpu_governor=' /DietPi/dietpi.txt | sed 's/.*=//')
 
 		local frequency_min_cpu_governor=1
 		local fp_frequency_min_cpu_governor='/sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq'
@@ -4340,8 +4343,8 @@ _EOF_
 
 					whiptail_menu_array+=("none" "Disables HDMI + 3.5mm Analogue")
 
-				#	NanoPi M2/M3, BPi Pro, OPi Zero
-				elif (( $HW_MODEL == 32 || $HW_MODEL == 51 || $HW_MODEL == 61 || $HW_MODEL == 62 )); then
+				#	NanoPi M2/M3, BPi Pro, OPi Zero, Rock64
+				elif (( $HW_MODEL == 32 || $HW_MODEL == 43 || $HW_MODEL == 51 || $HW_MODEL == 61 || $HW_MODEL == 62 )); then
 
 					whiptail_menu_array+=("default" "3.5mm Analogue")
 
@@ -4424,6 +4427,11 @@ _EOF_
 				elif (( $HW_MODEL == 32 )); then
 
 					whiptail_menu_array+=("h2-hdmi" "HDMI")
+
+				# - Rock64
+				elif (( $HW_MODEL == 43 )); then
+
+					whiptail_menu_array+=("rock64-hdmi" "HDMI")
 
 				#	NanoPi M2/M3
 				elif (( $HW_MODEL == 61 || $HW_MODEL == 62 )); then
