@@ -30,6 +30,7 @@
 	# HW_MODEL 60 NanoPi Neo
 	# HW_MODEL 51 BananaPi Pro (Lemaker)
 	# HW_MODEL 50 BananaPi M2+ (sinovoip)
+	# HW_MODEL 43 Rock64
 	# HW_MODEL 42 Pine A64+ (2048mb)
 	# HW_MODEL 41 Pine A64+ (1024mb)
 	# HW_MODEL 40 Pine A64  (512mb)
@@ -459,8 +460,14 @@
 				HW_MODEL_DESCRIPTION='BananaPi Pro'
 				IMAGE_ADDITIONAL_CREDITS='ARMbian'
 
+			#Rock64
+			elif (( $HW_MODEL == 43 )); then
+
+				HW_MODEL_DESCRIPTION='Rock64'
+				IMAGE_ADDITIONAL_CREDITS='Longsleep, Ayufan'
+
 			#PineA64
-			elif (( $HW_MODEL >= 40 && $HW_MODEL < 50 )); then
+			elif (( $HW_MODEL >= 40 && $HW_MODEL <= 42 )); then
 
 				IMAGE_ADDITIONAL_CREDITS='Longsleep, Rhkean'
 
