@@ -26,14 +26,19 @@
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#Change Hostname
 	#/////////////////////////////////////////////////////////////////////////////////////
-	HOSTNAME_CURRENT=$(cat /etc/hostname)
-	HOSTNAME_NEW=$1
+	HOSTNAME_NEW="$1"
 
 	#/////////////////////////////////////////////////////////////////////////////////////
 	# Main Loop
 	#/////////////////////////////////////////////////////////////////////////////////////
-	sed -i "s/$HOSTNAME_CURRENT/$HOSTNAME_NEW/g" /etc/hosts
-	sed -i "s/$HOSTNAME_CURRENT/$HOSTNAME_NEW/g" /etc/hostname
+	cat << _EOF_ > /etc/hosts
+127.0.0.1 localhost
+127.0.1.1 $HOSTNAME_NEW
+_EOF_
+
+	cat << _EOF_ > /etc/hostname
+$HOSTNAME_NEW
+_EOF_
 
 	#-----------------------------------------------------------------------------------
 	exit
