@@ -535,19 +535,41 @@ _EOF_
 
 			local install_url_address='https://github.com/sparkysbc/sparky_linux_images/raw/master/usbdac_mod_uImage.tar.bz2'
 
-			/DietPi/dietpi/func/check_connection "$install_url_address"
+			if [ "$INPUT_DEVICE_VALUE" = "sparky_sbc_rt" ]; then
 
-			#	Install
-			if (( $? == 0 )); then
+				install_url_address='http://dietpi.com/downloads/binaries/sparky/sparky_sbc_rt.zip'
 
-				wget "$install_url_address" -O package.bz2
-				tar -jxvf package.bz2 -C /boot
+				/DietPi/dietpi/func/check_connection "$install_url_address"
+				if (( $? == 0 )); then
 
-				rm package.bz2
+					wget "$install_url_address" -O package.zip
+
+					unzip -o package.zip -d /
+					if (( $? != 0 )); then
+
+						/DietPi/dietpi/func/dietpi-notify 1 "Failed to extract kernel $INPUT_DEVICE_NAME."
+
+					fi
+
+					rm package.zip
+
+				fi
 
 			else
 
-				/DietPi/dietpi/func/dietpi-notify 1 "Failed to install $INPUT_DEVICE_NAME. $install_url_address may be offline or unreachable."
+				/DietPi/dietpi/func/check_connection "$install_url_address"
+				if (( $? == 0 )); then
+
+					wget "$install_url_address" -O package.bz2
+					tar -jxvf package.bz2 -C /boot
+
+					rm package.bz2
+
+				else
+
+					/DietPi/dietpi/func/dietpi-notify 1 "Failed to install $INPUT_DEVICE_NAME. $install_url_address may be offline or unreachable."
+
+				fi
 
 			fi
 
