@@ -1,6 +1,9 @@
 v155
 (xx/08/17)
 
+New Image:
+Rock64 | Now available for beta testing: https://github.com/Fourdee/DietPi/issues/1102#issuecomment-325131437
+
 Changes / Improvements / Optimizations:
 General | RPi: Kernel updated to 4.9.40. Includes improved driver support for Allo Piano and DiGi One: https://github.com/raspberrypi/linux/pull/2149
 General | dietpi.txt: Added an dev option to force a resize + expansion on rootfs partition for next boot (fs_force_resize=1)
